Add some changes

--- a/AWS_EC2_instance-playbook.yml
+++ b/AWS_EC2_instance-playbook.yml
@@ -19,7 +19,7 @@
         local_action:
           module: ec2_group
           name: "{{ security_group }}"
-          description: Security Group for EC2 instance
+          description: Security group for EC2 instance
           region: "{{ region }}"
           rules:
             - proto: tcp
