--- a/AWS_EC2_instance-playbook.yml
+++ b/AWS_EC2_instance-playbook.yml
@@ -11,7 +11,16 @@
       image: ami-026c8acd92718196b
       region: us-east-1
       keypair: my_sshkeypair
+      ec2_volume_size_sda: 60
+      ec2_volume_size_sdb: 10
       count: 2
+      my_user_data: |
+                 #!/bin/sh
+                 sudo /sbin/parted /dev/xvdb mklabel gpt --script
+                 sudo /sbin/parted /dev/xvdb mkpart primary 0% 100% --script
+                 sudo mkfs.ext4 /dev/xvdb1
+                 sudo mkdir /var/www/ && sudo mount /dev/xvdb1 /var/www/
+                 sudo apt update && apt install nginx -y
 
     tasks:
 
@@ -25,6 +34,10 @@
             - proto: tcp
               from_port: 22
               to_port: 22
+              cidr_ip: 0.0.0.0/0
+            - proto: tcp
+              from_port: 80
+              to_port: 80
               cidr_ip: 0.0.0.0/0
           rules_egress:
             - proto: all
@@ -41,14 +54,25 @@
         when: ec2_key_result.changed
 
       - name: Launch new t2 micro EC2 instance
-        local_action: ec2
-                      group={{ security_group }}
-                      instance_type={{ instance_type}}
-                      image={{ image }}
-                      wait=true
-                      region={{ region }}
-                      keypair={{ keypair }}
-                      count={{count}}
+        local_action:
+          module: ec2
+          group: "{{ security_group }}"
+          instance_type: "{{ instance_type}}"
+          image: "{{ image }}"
+          wait: true
+          region: "{{ region }}"
+          keypair: "{{ keypair }}"
+          count: "{{ count }}"
+          user_data: "{{ my_user_data }}"
+          volumes:
+          - device_name: /dev/sda1
+            volume_type: gp2
+            volume_size: "{{ ec2_volume_size_sda }}"
+            delete_on_termination: true
+          - device_name: /dev/sdb
+            volume_type: gp2
+            volume_size: "{{ ec2_volume_size_sdb }}"
+            delete_on_termination: true
         register: ec2
 
       - name: Wait for EC2 instance is ready for SSH access
