--- a/AWS_EC2_instance-playbook.yml
+++ b/AWS_EC2_instance-playbook.yml
@@ -7,7 +7,7 @@
 
     vars:
       instance_type: t2.micro
-      security_group: ssh-server
+      security_group: web-server
       image: ami-026c8acd92718196b
       region: us-east-1
       keypair: my_sshkeypair
